--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -9,6 +9,7 @@
 <body>
     <h1> Add a Todo Item: </h1>
     <form method="POST" action="add">
+        {% csrf_token  %}
         <div>
             <p>
                 <label for="id_name">Name: </label>
@@ -18,7 +19,7 @@
         <div>
             <p>
                 <label for="id_done">Done: </label>
-                <input typ="checkbox" id="id_done" name="done"/>
+                <input type="checkbox" id="id_done" name="done"/>
             </p>
         </div>
         <div>
