--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -16,12 +16,25 @@
 {% else %}
     <td>{{ item.name}} </td>  
 {% endif %}
+</td>
+<td>
+    <a href="/toggle/{{ item.id}}">
+        <button>toggle</button>
+    </a>
+        
+    </td>
 <td>
 <a href="/edit/{{ item.id}}">
     <button>Edit</button>
 </a>
     
 </td>
+<td>
+    <a href="/delete/{{ item.id}}">
+        <button>Delete</button>
+    </a>
+        
+    </td>
 </tr>
 {% empty %}
     <tr><td>You have nothing to do</td></tr>
